scrollbar + mealitem ID fix

--- a/src/components/UI/Input.module.css
+++ b/src/components/UI/Input.module.css
@@ -1,13 +1,17 @@
 .input {
 	margin: 0 0.5rem 0.5rem 0;
-	width: 5rem;
+	width: 10rem;
 	border-radius: 5px;
 	font: inherit;
-	padding-left: 0.5rem;
 }
 
 .input label {
 	font-weight: bold;
 	color: #1a1b1c;
 	min-width: 100%;
+}
+
+.inputamount {
+	border: 1px solid #ececec;
+	outline: none;
 }
